--- a/WarehouseAPI/src/main/resources/templates/user/create2.html
+++ b/WarehouseAPI/src/main/resources/templates/user/create2.html
@@ -29,13 +29,15 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
                     <label>Password</label>
                     <input type="password" class="form-control" th:field="*{password}"  placeholder="Enter Password" required>
                 </div>
-                <div class="form-group">
+                <input type="hidden" value="true" th:field="*{active}">
+                
+<!--                <div class="form-group">
                     <label>Role</label>
-                    <!--<input type="email" class="form-control" th:field="*{email}"  placeholder="Enter Email" required>-->
+                    <input type="email" class="form-control" th:field="*{email}"  placeholder="Enter Email" required>
                     <select name="role" class="form-select">
                         <option th:each="role : ${roles}" th:value="${role.name}" th:text="${role.name}"></option>
                     </select>
-                </div>
+                </div>-->
                 <button type="submit" class="btn btn-primary">Create</button>
             </form>
             </div>
