--- a/WarehouseAPI/src/main/resources/templates/user/update.html
+++ b/WarehouseAPI/src/main/resources/templates/user/update.html
@@ -30,7 +30,11 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
                     <label>Password</label>
                     <input type="password" class="form-control" th:field="*{password}"  placeholder="leave blank if you dont want to change" >
                 </div>
-
+                <div class="form-group">
+                    <label>Active</label>
+                    <input type="checkbox" th:field="*{active}" >
+                </div>
+                
                 <button type="submit" class="btn btn-primary">Update</button>
             </form>
             </div>
