--- a/WarehouseMobile/app/src/main/res/layout/activity_view.xml
+++ b/WarehouseMobile/app/src/main/res/layout/activity_view.xml
@@ -7,7 +7,7 @@
     tools:context=".ViewActivity">
 
     <ImageButton
-        android:id="@+id/imageButton"
+        android:id="@+id/goodsImage"
         android:layout_width="90dp"
         android:layout_height="90dp"
         android:layout_marginStart="80dp"
@@ -26,7 +26,7 @@
         android:layout_marginEnd="80dp"
         android:scaleType="fitCenter"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/imageButton"
+        app:layout_constraintStart_toEndOf="@+id/goodsImage"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/order" />
 
@@ -38,7 +38,7 @@
         android:layout_marginTop="67dp"
         android:scaleType="fitCenter"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageButton"
+        app:layout_constraintTop_toBottomOf="@+id/goodsImage"
         app:srcCompat="@drawable/movement" />
 
     <ImageButton
@@ -72,7 +72,7 @@
         android:layout_marginTop="16dp"
         android:text="Goods Information"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageButton" />
+        app:layout_constraintTop_toBottomOf="@+id/goodsImage" />
 
     <TextView
         android:id="@+id/textView3"
