--- a/WarehouseMobile/app/src/main/res/layout/activity_main.xml
+++ b/WarehouseMobile/app/src/main/res/layout/activity_main.xml
@@ -31,7 +31,7 @@
         android:layout_marginBottom="10dp"
         android:ems="10"
         android:hint="Password"
-        android:inputType="textPersonName"
+        android:inputType="textPassword"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
