Change backup mobile app

--- a/BackupMobile/app/src/main/res/layout/activity_view.xml
+++ b/BackupMobile/app/src/main/res/layout/activity_view.xml
@@ -42,7 +42,7 @@
         app:srcCompat="@drawable/movement" />
 
     <ImageButton
-        android:id="@+id/imageButton4"
+        android:id="@+id/imgIssue"
         android:layout_width="90dp"
         android:layout_height="90dp"
         android:layout_marginStart="40dp"
