--- a/BackupMobile/app/src/main/res/layout/activity_issue_order_detail.xml
+++ b/BackupMobile/app/src/main/res/layout/activity_issue_order_detail.xml
@@ -3,41 +3,41 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
     android:padding="10dp"
     android:layout_marginTop="10dp"
     android:layout_marginEnd="10dp"
-    tools:context=".AllocateDetailActivity">
+    android:layout_height="match_parent"
+    tools:context=".IssueOrderDetailActivity">
     <TextView
-        android:id="@+id/tvAllocateText"
+        android:id="@+id/tvText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:layout_centerHorizontal="true"
         android:gravity="center"
-        android:text="Allocate Order Infomation "
+        android:text="Issue Order Infomation "
         android:textColor="@android:color/black"
         android:textSize="26sp"
         android:textStyle="bold" />
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_marginTop="30dp"
         android:orientation="vertical">
-    <ImageView
-        android:id="@+id/img_ava_detail"
-        android:layout_width="300dp"
-        android:layout_height="200dp"
-        android:layout_marginStart="30dp"
-        android:layout_marginTop="30dp"
-        app:srcCompat="@mipmap/ic_launcher"
-        tools:layout_editor_absoluteX="42dp"
-        tools:layout_editor_absoluteY="42dp" />
+
+        <ImageView
+            android:id="@+id/img_ava_issue_detail"
+            android:layout_width="300dp"
+            android:layout_height="200dp"
+            android:layout_gravity="center"
+            android:layout_marginTop="30dp"
+            app:srcCompat="@mipmap/ic_launcher"
+            tools:layout_editor_absoluteX="42dp"
+            tools:layout_editor_absoluteY="42dp" />
     </LinearLayout>
 
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center_horizontal"
@@ -45,15 +45,15 @@
         android:orientation="vertical">
 
         <TextView
-            android:id="@+id/tv_detail_GoodsName"
+            android:id="@+id/tv_issue_detail_GoodsName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:gravity="center"
             android:text="Goods Name:"
             android:textColor="@android:color/black"
             android:textSize="20sp" />
     </LinearLayout>
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -65,7 +65,7 @@
         android:layout_centerHorizontal="true">
 
         <TextView
-            android:id="@+id/textViewLocation1"
+            android:id="@+id/textViewLocation"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_weight="1"
@@ -73,10 +73,10 @@
             android:textColor="@android:color/black"
             android:textSize="20sp"
             android:textStyle="bold"
-            android:text="No  " />
+            android:text="Location : " />
 
         <TextView
-            android:id="@+id/textViewDate1"
+            android:id="@+id/textViewDate"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_weight="1"
@@ -84,10 +84,10 @@
             android:textAlignment="center"
             android:textSize="20sp"
             android:textStyle="bold"
-            android:text="Movement Date  " />
+            android:text="Ref no : " />
 
         <TextView
-            android:id="@+id/textViewQuantity1"
+            android:id="@+id/textViewQuantity"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_weight="1"
@@ -98,7 +98,6 @@
             android:textSize="20sp"
             />
     </LinearLayout>
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -106,36 +105,37 @@
         android:orientation="horizontal"
         android:layout_marginBottom="10dp"
         android:layout_marginTop="450dp"
+        android:layout_marginStart="10dp"
         android:layout_centerHorizontal="true">
 
         <TextView
-            android:id="@+id/tv_detail_id"
+            android:id="@+id/tv_issue_detail_location"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:textAlignment="center"
             android:textColor="@android:color/black"
             android:textSize="20sp"
-            android:text="1" />
+            android:text="Location 1 " />
 
         <TextView
-            android:id="@+id/tv_detail_date"
+            android:id="@+id/tv_detail_ref"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:textColor="@android:color/black"
             android:textAlignment="center"
             android:textSize="20sp"
-            android:text="Name" />
+            android:text="REF123123" />
 
         <TextView
-            android:id="@+id/tv_detail_quantity"
+            android:id="@+id/tv_issue_detail_quantity"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:textColor="@android:color/black"
             android:textAlignment="center"
-            android:text="Loc"
+            android:text="1000"
             android:textSize="20sp"
             />
     </LinearLayout>
@@ -149,33 +149,31 @@
         android:layout_marginStart="10dp"
         android:layout_centerHorizontal="true">
 
-
-
-    <LinearLayout
-        android:layout_width="0dp"
-        android:layout_height="match_parent"
-        android:layout_weight="1"
-        android:gravity="center"
-        android:orientation="vertical" >
-
-        <Button
-            android:id="@+id/btnSubmit"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:backgroundTint ="@color/green"
-            android:text="Submit" />
-    </LinearLayout>
         <LinearLayout
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:gravity="center"
+            android:gravity="right"
+            android:orientation="vertical" >
+
+            <Button
+                android:id="@+id/btnIssueSubmit"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:backgroundTint ="@color/green"
+                android:text="Submit" />
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:gravity="left"
             android:orientation="vertical" >
             <Button
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/btnDecline"
+                android:id="@+id/btnIssueDecline"
                 android:backgroundTint ="@color/red"
                 android:text="Decline"
                 android:layout_marginLeft="10dp"/>
