--- a/WarehouseAPI/src/main/resources/templates/layout/layout.html
+++ b/WarehouseAPI/src/main/resources/templates/layout/layout.html
@@ -109,8 +109,14 @@
                 </li>
                 <li class="nav-item nav-supplier">
                     <a class="nav-link nav-customer" th:href="@{/customer}">
-                        <i class="fa-solid fa-person-walking-luggage"></i></i>
+                        <i class="fa-solid fa-person-walking-luggage"></i>
                         <span>Customer</span></a>
+                </li>
+                
+                <li class="nav-item nav-supplier">
+                    <a class="nav-link nav-customer" th:href="@{/transaction}">
+                        <i class="fa-solid fa-truck-moving"></i>
+                        <span>Transaction</span></a>
                 </li>
 
                 <li class="nav-item nav-user" sec:authorize="hasRole('ROLE_ADMIN') or hasRole('ROLE_MANAGER')">
